# chrono

./: .gitignore  README.md  index.html  package-lock.json  package.json  pyproject.toml  simulate_data.py  tailwind.config.ts
chrono/: __init__.py  __main__.py  app.py  app.tcss  db.py  models.py  themes.py
chrono/screens/: __init__.py  events.py  goals.py  habits.py  timeline.py  tracking.py
chrono/themes/: __init__.py  dracula.tcss  nord.tcss  one_dark.tcss  solarized_dark.tcss
chrono/widgets/: __init__.py  bar_chart.py  event_list.py  goal_card.py  habit_grid.py  timer_widget.py
src/: App.tsx  index.css  main.tsx
src/components/: ActivityCard.tsx  Analytics.tsx  EventsList.tsx  Navigation.tsx  ProtectedRoute.tsx  TimelineChart.tsx  Timer.tsx  TimerList.tsx
src/components/Analytics/: AnalyticsCharts.tsx  AnalyticsSummary.tsx  BarChart.tsx  DateRangeProvider.tsx  LifeChartView.tsx  PieChart.tsx  Timeline.tsx  index.tsx  useAnalyticsData.tsx
src/components/Auth/: AuthContext.tsx  ProtectedRoute.tsx  index.tsx
src/components/Events/: EventCard.tsx  EventsList.tsx  NewEventForm.tsx  StatementPeriodSelect.tsx
src/components/Goals/: GoalCard.tsx  GoalForm.tsx  (+2 more)
src/hooks/: useGoalsSubscription.ts
src/pages/: Auth.tsx  Events.tsx  Goals.tsx  Habits.tsx  Index.tsx  Login.tsx  PrivacyPolicy.tsx  Settings.tsx  Statement.tsx  Timeline.tsx  Tracking.tsx
src/types/: habitGrid.ts  timeEntry.ts  timer.ts  timerState.ts
src/utils/: dateFormatters.ts  lifeChartCalculations.ts  lifeProjections.ts  pdfGenerator.ts  pdfGenerator.tsx
supabase/: config.toml
(+51 files in other folders)
