[project]
name = "chrono-tracker"
version = "0.1.0"
description = "A terminal-based time tracking app built with Textual"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.89",
    "peewee>=3.17",
]

[project.optional-dependencies]
dev = [
    "textual-dev>=1.0",
]

[project.scripts]
chrono = "chrono.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chrono"]
